hard-gists/3081369/run.log
=== Docker Run Log for 3081369 ===
Started at: Mi 29. Okt 13:39:45 CET 2025

[2025-10-29 13:39:46] START: Running container for 3081369
[2025-10-29 13:39:46] SUCCESS: Container ba99f9069547298a011131ec6c5ccbc52baa4da9780919ee7adbf822b2cb267f started for 3081369
=== Container logs for 3081369 ===
  File "/snippet.py", line 121
    print side,
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3081369 ===
[2025-10-29 13:39:48] INFO: Container ba99f9069547298a011131ec6c5ccbc52baa4da9780919ee7adbf822b2cb267f has stopped
